# aaruremote

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  aaruremote.h  ata.c  build.sh  codealike.json  device.c  dicmote.h  endian.h  hex2bin.c  ieee1394.c  list_devices.c  main.c  pcmcia.c  scsi.c  sdhci.c  usb.c  worker.c
freebsd/: CMakeLists.txt  ata.c  device.c  freebsd.h  ieee1394.c  list_devices.c  pcmcia.c  scsi.c  sdhci.c  usb.c
linux/: CMakeLists.txt  ata.c  device.c  ieee1394.c  linux.h  list_devices.c  pcmcia.c  scsi.c  sdhci.c  usb.c
linux/mmc/: ioctl.h
projects/msvc2005/: aaruremote.sln  aaruremote.vcproj
projects/msvc2017/: aaruremote.sln  aaruremote.vcxproj
projects/msvc2019/: aaruremote.sln  aaruremote.vcxproj
unix/: hello.c  network.c  unix.c  unix.h
wii/: CMakeLists.txt  hello.c  list_devices.c  network.c  unimplemented.c  unsupported.c  wii.c  wii.h
win32/: CMakeLists.txt  ata.c  device.c  hello.c  ieee1394.c  list_devices.c  network.c  ntioctl.h  pcmcia.c  scsi.c  sdhci.c  usb.c  usb.h  win32.c  win32.h
